--- a/style.css
+++ b/style.css
@@ -1,11 +1,21 @@
-*{
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+body {
+  background: #fff;
+  font-family: "Poppins", sans-serif;
+}
+
+.header {
+  background: radial-gradient(#fff, #ffd6d6);
+}
 .container {
-  /* background-color: gray; */
+  background-color: tomato;
   max-width: 1300px;
   margin: auto;
   padding-left: 25px;
@@ -13,10 +23,10 @@
 }
 
 .navbar {
+  background-color: yellow;
   display: flex;
   align-items: center;
   padding: 20px;
-  /* background-color: yellow; */
 }
 
 nav {
@@ -74,8 +84,4 @@ p {
   margin: 30px 0;
   border-radius: 30px;
   transition: background 0.5s;
-}
-
-.header {
-  background: radial-gradient(#fff, #ffd6d6);
 }
