--- a/style.css
+++ b/style.css
@@ -85,3 +85,34 @@ p {
   border-radius: 30px;
   transition: background 0.5s;
 }
+
+.header .row {
+  margin-top: 70px;
+}
+
+.btn:hover {
+  background: #563434;
+}
+
+.categories {
+  background-color: aqua;
+  margin: 70px 0;
+}
+
+.col-3 {
+  flex-basis: 30%;
+  min-width: 250px;
+  margin-bottom: 30px;
+}
+
+.col-3 img {
+  width: 100%;
+}
+
+.small-container {
+  background-color: black;
+  max-width: 1080px;
+  margin: auto;
+  padding-left: 25px;
+  padding-right: 25px;
+}
