--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
   background: radial-gradient(#fff, #ffd6d6);
 }
 .container {
-  background-color: tomato;
   max-width: 1300px;
   margin: auto;
   padding-left: 25px;
@@ -23,7 +22,6 @@ body {
 }
 
 .navbar {
-  background-color: yellow;
   display: flex;
   align-items: center;
   padding: 20px;
@@ -95,7 +93,6 @@ p {
 }
 
 .categories {
-  background-color: aqua;
   margin: 70px 0;
 }
 
@@ -110,9 +107,57 @@ p {
 }
 
 .small-container {
-  background-color: black;
   max-width: 1080px;
   margin: auto;
   padding-left: 25px;
   padding-right: 25px;
+}
+
+.col-4 {
+  flex-basis: 25%;
+  padding: 10px;
+  min-width: 200px;
+  margin-bottom: 50px;
+  transition: transform 0.5s;
+}
+
+.col-4 img {
+  width: 100%;
+}
+
+.title {
+  text-align: center;
+  margin: 0 auto 80px;
+  position: relative;
+  line-height: 60px;
+  color: #555;
+}
+
+.title::after {
+  content: "";
+  background: #ff523b;
+  width: 80px;
+  height: 5px;
+  border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+h4 {
+  color: #555;
+  font-weight: normal;
+}
+
+.col-4 p {
+  font-size: 14px;
+}
+
+.rating .fa {
+  color: #ff523b;
+}
+
+.col-4:hover {
+  transform: translateY(-5px);
 }
