--- a/style.css
+++ b/style.css
@@ -338,6 +338,13 @@ ul {
  
 } 
 
+/* all products page */
+.row-2 {
+  justify-content: space-between;
+  margin: 100px auto 50px;
+}
+
+
 /* media query for less than 600 screen size */
 
 @media only screen and (max-width: 600px) {
