--- a/style.css
+++ b/style.css
@@ -408,6 +408,16 @@ select:focus {
   border: 1px solid #ff523b;
 }
 
+input:focus {
+  outline: none;
+}
+
+.single-product .fa {
+  color: #ff523b;
+  margin-left: 10px;
+}
+
+
 
 
 /* media query for less than 600 screen size */
