--- a/style.css
+++ b/style.css
@@ -417,8 +417,15 @@ input:focus {
   margin-left: 10px;
 }
 
+.small-img-row {
+  display: flex;
+  justify-content: space-between;
+}
 
-
+.small-img-col {
+  flex-basis: 24%;
+  cursor: pointer;
+}
 
 /* media query for less than 600 screen size */
 
