--- a/style.css
+++ b/style.css
@@ -446,7 +446,7 @@ input:focus {
     font-size: 26px;
     line-height: 32px;
   }
-  /* .cart-info p {
+  .cart-info p {
     display: none;
-  } */
+  }
 }
